--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "async": "^2.0.1",
     "lodash": "^4.14.0",
     "pryv": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.5.3",
+    "should": "^10.0.0"
   }
 }
