--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Useful javascript functions for Pryv data manipulation",
   "main": "source/main.js",
   "scripts": {
-    "test": "mocha test/*/*"
+    "test": "mocha test/**/*.test.js"
   },
   "repository": {
     "type": "git",
